--- a/app/src/main/res/layout/content_main_tugas.xml
+++ b/app/src/main/res/layout/content_main_tugas.xml
@@ -18,6 +18,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardTugas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
