--- a/app/src/main/res/layout/activity_jemput.xml
+++ b/app/src/main/res/layout/activity_jemput.xml
@@ -41,7 +41,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Alamat"/>
+                android:text="Alamat Detail (*Nama Jalan, Nama Gedung, dll)"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
