--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -7,11 +7,26 @@
     android:theme="@style/ThemeOverlay.AppCompat"
     app:titleTextColor="@color/white">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/toolbarText"
-        android:textColor="@color/white"
-        android:textSize="20dp"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/toolbarText"
+            android:textColor="@color/white"
+            android:textSize="20dp"/>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/riwayatJS"
+            android:text="Jemput Sampah"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="3dp"
+            android:visibility="gone"
+            />
+    </RelativeLayout>
 </androidx.appcompat.widget.Toolbar>
